# mobius-carbon

./: .gitignore  CMakeLists.txt  COPYING  Makefile  README.md  carbon.cmake  compile_commands.json  conf  deconf  krnl.ld  mk  spawn.sh  super.sh
Make/: Makefil00  Makefile  imag.sh
aconf/: kernel.ld  linker.ld
bogus/: bogus.h  f.h  n.h
chips/: chips_idt.c  chips_idt_commonhandler.c  chips_idt_exstub.c  chips_mmu.c  chips_serial.c  chips_serial_console.c  idt.h  mmu.h  serial_defs.h
conf/: arch  cflags  cppflags  ldflags  limine.cfg  linker.ld  rules.mk  toolchain.mk
config/: carbon.ld  defaults.make
csr/: csr_cnsl.c  csr_mascotte.c  csr_tty.c
debug/: debug.mk  trace.c  trace.h
device/: io.h
dwb/: Makefil00  Makefile  imag.sh  target.mk
gnu/: License.txt
hali686/: gdt.c  idt.c  inth.c  ioctl.c  ioctl.h  register.h  tab.c  tab.h  termio.c  termio.h
head/: .gitignore  carbon.h  hal.h  stdio.h  sys.h
hil/: panic.c
i386/: cpu.c  cpu.h  i386.mk  i386_boot.S  i386_enable_paging.S  i386_gdt.S  i386_io.S  i386_isr.S  i386_load_pdir.S
include/: time.h  types.h  uart.h
io/: io.h  io.mk  print.c  tag.c
kern/: bootstrap.c  kern.mk  kern_entry.S  kern_main.c  kmain.c
lib/: print.c  string.c
libc/: CMakeLists.txt  assert.h  cplus.h  dtoa.c  export.txt  libc.mk  memset.c  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  strlen.c  stub.c
libcpp/: cplus
libkern/: CMakeLists.txt  assert.c  convert.c  export.txt  libk_memchr.c  libk_memcmp.c  libk_memcpy.c  libk_memmem.c  libk_memmove.c  libk_memrchr.c  libk_memrmem.c  libk_memset.c  libk_str.c  libkern_printf.c  tty.c
libkern/carbon/: printf.h
libsa/: Building.md  Makefile  bateau.h  bframebuffer.h  boot_bfb.c  boot_bootpicker.c  boot_memmap.c  boot_splash.c  boot_stald.c  bootf.h  uefi
limine/: BOOTX64.EFI copy 2  clone.txt
man/: Building.txt  COPYING.txt  LICENSE  Layout.txt  License.txt  NEWS  README  Scripts.txt  e0-p00.md  e0-p01.md  e0-p02.md  e1-p03.md  e1-p04.md  e1-p05.md  e1-p06.md  e2-p07.md
man 16.51.58/: Building.md  README.md
mk/: .bash_history  .gitignore  Makefil00  Makefile  imag.sh  limine.cfg  lnk.lds  multiboot.sh
osck/: CMakeLists.txt
osck/kern/: kern_start.c  kern_vm.c  kern_vm_init.c
osck/vm/: vm_i.c  vm_mgr.c  vm_paging.c
pexpert/: CMakeLists.txt  Makefile
rootfs/: startup.nsh
s/: cn.s  io.s  platf.s  str1.s  str2.s  str3.s  str4.s  str5.s  str6.s
stand/: stivale2.h
sys/: announce.c  assert.h  defs.h  machine.h  main.c  offset.h  types.h
util/: putchar.c  util_putchar.c
vm/: descriptor_tables.h  load.c  paging.h  vm.h  vm.mk  vm_descriptor_tables.c  vm_init.c  vm_page_directory.c  (+1 more)
(+343 files in other folders)
